--- a/src/main/resources/front/front/pages/jiankangrizhi/list2.html
+++ b/src/main/resources/front/front/pages/jiankangrizhi/list2.html
@@ -143,7 +143,7 @@
                     <tr>
                     <!-- 级联表 -->
                         <!-- 当前表 -->
-                        <th>健康日志编号</th>
+                        <th>健康日志编号list2</th>
                         <th>健康日志名称</th>
                         <th>健康日志类型</th>
                         <th>睡眠情况</th>
