--- a/src/main/resources/front/front/pages/login/wangjimima.html
+++ b/src/main/resources/front/front/pages/login/wangjimima.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,129 +12,156 @@
 </head>
 
 <body>
-    <div id="app" class="login">
-        <form id="loginForm" class="login-form">
-            <div class="msg-warn">忘记密码</div>
-            <div class="form-item">
-                <input class="layui-input common-style" type="text" v-model="username" required placeholder="请输入账号">
-            </div>
-            <div class="form-item">
-                <input class="layui-input common-style" type="email" v-model="email" required placeholder="请输入邮箱">
-                <!-- 换行 -->
-                <br>
-                <button type="button" class="layui-btn layui-btn-normal btn-code" @click="sendCode"
+<div id="app" class="login">
+    <form id="loginForm" class="login-form">
+        <div class="msg-warn">忘记密码</div>
+        <div class="form-item">
+            <input class="layui-input common-style" type="text" v-model="username" required placeholder="请输入账号">
+        </div>
+        <div class="form-item">
+            <input class="layui-input common-style" type="email" v-model="email" required placeholder="请输入邮箱">
+            <br>
+            <button type="button" class="layui-btn layui-btn-normal btn-code"
+                    @click="sendCode"
                     :disabled="codeButtonDisabled">
-                    {{ codeButtonText }}
-                </button>
-            </div>
-            <div class="form-item">
-                <input class="layui-input common-style" type="text" v-model="code" required placeholder="请输入邮箱验证码">
-            </div>
-            <button type="button" class="layui-btn layui-btn-fluid layui-btn-danger btn-submit" @click="resetPassword">
-                重置密码
+                {{ codeButtonText }}
             </button>
-            <p style="color: var(--publicMainColor); text-align: center; font-size: 12px;">
-                <a href="javascript:void(0);" @click="registerClick('yonghu')">注册用户</a>
-            </p>
-        </form>
-    </div>
+        </div>
+        <div class="form-item">
+            <input class="layui-input common-style" type="text" v-model="code" required placeholder="请输入邮箱验证码">
+        </div>
+        <button type="button" class="layui-btn layui-btn-fluid layui-btn-danger btn-submit"
+                @click="resetPassword">
+            重置密码
+        </button>
+        <p style="color: var(--publicMainColor); text-align: center; font-size: 12px;">
+            <a href="javascript:void(0);" @click="registerClick('yonghu')">注册用户</a>
+        </p>
+    </form>
+</div>
 
-    <script src="../../layui/layui.js"></script>
-    <script src="../../js/vue.js"></script>
-    <script>
-        var vue = new Vue({
-            el: '#app',
-            data: {
-                username: '',
-                email: '',
-                code: '',
-                generatedCode: '', // 存储前端生成的验证码
-                codeButtonText: '获取验证码',
-                codeButtonDisabled: false,
-                countdown: 60
+<script src="../../layui/layui.js"></script>
+<script src="../../js/vue.js"></script>
+<script>
+    var vue = new Vue({
+        el: '#app',
+        data: {
+            username: '',
+            email: '',
+            code: '',
+            generatedCode: '',
+            serverEmail: '',  // 存储从服务器获取的邮箱
+            codeButtonText: '获取验证码',
+            codeButtonDisabled: false,
+            countdown: 60
+        },
+        methods: {
+            generateCode() {
+                return Math.floor(100000 + Math.random() * 900000).toString();
             },
-            methods: {
-                // 生成6位数字验证码
-                generateCode() {
-                    return Math.floor(100000 + Math.random() * 900000).toString();
-                },
 
-                // 发送验证码
-                sendCode() {
-                    if (!this.email) {
-                        alert('请输入邮箱！');
-                        return;
-                    }
-
-                    // 生成验证码并存储
-                    this.generatedCode = this.generateCode();
-                    console.log('验证码：', this.generatedCode); // 调试用
-
-                    // 邮件 API 地址（替换 email 为用户输入的邮箱）
-                    let apiUrl = `http://api.mmp.cc/api/mail?email=${this.email}&key=fybjagiuzrqsbajf&mail=2825463258@qq.com&title=验证码&name=系统通知&text=您的验证码是：${this.generatedCode}，有效期5分钟。`;
-
-                    // 发送请求
-                    fetch(apiUrl)
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data.code === 200) {
-                                alert('验证码已发送，请检查邮箱！');
-                                this.startCountdown();
-                            } else {
-                                alert('验证码发送失败，请稍后重试！');
-                            }
-                        })
-                        .catch(error => {
-                            alert('网络错误，请检查您的网络连接！');
-                        });
-                },
-
-                // 启动倒计时
-                startCountdown() {
-                    this.codeButtonDisabled = true;
-                    this.codeButtonText = `重新获取(${this.countdown}s)`;
-                    let interval = setInterval(() => {
-                        this.countdown--;
-                        this.codeButtonText = `重新获取(${this.countdown}s)`;
-                        if (this.countdown <= 0) {
-                            clearInterval(interval);
-                            this.codeButtonDisabled = false;
-                            this.codeButtonText = '获取验证码';
-                            this.countdown = 60; // 重置倒计时
-                        }
-                    }, 1000);
-                },
-
-                // 重置密码
-                resetPassword() {
-                    if (!this.username || !this.email || !this.code) {
-                        alert('请填写所有信息！');
-                        return;
-                    }
-
-                    // 验证验证码是否正确
-                    if (this.code !== this.generatedCode) {
-                        alert('验证码错误，请重新输入！');
-                        return;
-                    }
-
-                    // 假设这里执行重置密码的逻辑（前端模拟）
-                    alert('验证码正确，密码重置成功！（仅模拟，无实际更改）');
-
-                    // 重置表单
-                    this.username = '';
-                    this.email = '';
-                    this.code = '';
-                    this.generatedCode = '';
-                },
-
-                // 注册点击事件
-                registerClick(tablename) {
-                    window.location.href = `../${tablename}/register.html?tablename=${tablename}`;
+            async sendCode() {
+                // 基础校验
+                if (!this.username) {
+                    alert('请输入用户名！');
+                    return;
                 }
-            }
-        });
-    </script>
-</body>
+                if (!this.email) {
+                    alert('请输入邮箱！');
+                    return;
+                }
 
+                try {
+                    // 校验用户名和邮箱是否匹配
+                    const checkRes = await fetch(`http://localhost:8080/intelligent-health-monitoring-demo/yonghu/getEmailByUsername?username=${this.username}`);
+                    const checkData = await checkRes.json();
+
+                    if (checkData.code !== 0 || !checkData.data?.email) {
+                        alert('用户名不存在！');
+                        return;
+                    }
+
+                    this.serverEmail = checkData.data.email;
+                    if (this.email !== this.serverEmail) {
+                        alert('邮箱与账号不匹配！');
+                        return;
+                    }
+
+                    // 生成并发送验证码
+                    this.generatedCode = this.generateCode();
+                    const mailApi = `http://localhost:8080/intelligent-health-monitoring-demo/yonghu/sendMail?toEmail=${this.email}&subject=密码重置验证码&text=验证码：${this.generatedCode}（有效期5分钟）`;
+
+                    const mailRes = await fetch(mailApi);
+                    const mailData = await mailRes.json();
+
+                    if (mailData.code === 0) {
+                        alert('验证码已发送，请检查邮箱！');
+                        this.startCountdown();
+                    } else {
+                        alert('验证码发送失败：' + (mailData.msg || '未知错误'));
+                    }
+                } catch (error) {
+                    alert('请求失败：' + error.message);
+                }
+            },
+
+            startCountdown() {
+                this.codeButtonDisabled = true;
+                this.countdown = 60;
+                const timer = setInterval(() => {
+                    this.countdown--;
+                    this.codeButtonText = `重新发送(${this.countdown}s)`;
+                    if (this.countdown <= 0) {
+                        clearInterval(timer);
+                        this.codeButtonText = '获取验证码';
+                        this.codeButtonDisabled = false;
+                    }
+                }, 1000);
+            },
+
+            async resetPassword() {
+                // 表单校验
+                if (!this.username || !this.email || !this.code) {
+                    alert('请填写所有信息！');
+                    return;
+                }
+                if (this.code !== this.generatedCode) {
+                    alert('验证码错误！');
+                    return;
+                }
+
+                try {
+                    // 调用重置密码API
+                    const resetRes = await fetch(
+                        `http://localhost:8080/intelligent-health-monitoring-demo/yonghu/resetPasswordByUsername?username=${this.username}`,
+                        { method: 'GET' }
+                    );
+                    const resetData = await resetRes.json();
+
+                    if (resetData.code === 0) {
+                        alert('密码已重置为123456！');
+                        this.clearForm();
+                    } else {
+                        alert(`重置失败：${resetData.msg || '未知错误'}（代码：${resetData.code}）`);
+                    }
+                } catch (error) {
+                    alert('重置请求失败：' + error.message);
+                }
+            },
+
+            clearForm() {
+                this.username = '';
+                this.email = '';
+                this.code = '';
+                this.generatedCode = '';
+                this.serverEmail = '';
+            },
+
+            registerClick(tablename) {
+                window.location.href = `../${tablename}/register.html?tablename=${tablename}`;
+            }
+        }
+    });
+</script>
+</body>
 </html>
