--- a/src/main/resources/front/front/pages/dictionary/list.html
+++ b/src/main/resources/front/front/pages/dictionary/list.html
@@ -205,7 +205,7 @@
     .layui-laypage .layui-laypage-skip {
         padding-left: 10px;
     }
-    /*新闻标题样式*/
+    /*健康资讯标题样式*/
     .recommend .box .news .list-item .list-item-body .item-info .name {
         padding-top: 5px;
         color: red;
@@ -217,7 +217,7 @@
         -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
     }
-    /*新闻内容样式*/
+    /*健康资讯内容样式*/
     .recommend .box .news .list-item .list-item-body .item-info .time {
         padding-top: 5px;
         color: red;
