--- a/src/main/resources/front/front/pages/home/home.html
+++ b/src/main/resources/front/front/pages/home/home.html
@@ -247,7 +247,7 @@ h4.p-mask span {
 	color: #191919;
 	font-size: 24px
 }
-    /*home页面新闻数据样式*/
+    /*home页面健康资讯数据样式*/
 </style>
 <body>
 <div id="app" >
@@ -270,7 +270,7 @@ h4.p-mask span {
 <div class="title sub_borderColor main_backgroundColor"
      :style='{"padding":"10px 0 10px 0","boxShadow": "#fff 0px 0px 6px","margin":"10px 0 10px 0","color":"rgba(255, 255, 255, 1)","borderRadius":"8px","alignItems":"center","borderWidth":"0   0 3px 0","fontSize":"16px","borderStyle":"solid"}'>
       <span>NEWS</span>
-    <span>新闻展示</span>
+    <span>健康资讯展示</span>
 </div>
                             </div>
                             <div class="wow " data-wow-duration="2s" data-wow-delay="1s">
@@ -305,7 +305,7 @@ h4.p-mask span {
 <div class="title sub_borderColor main_backgroundColor"
      :style='{"padding":"10px 0 10px 0","boxShadow": "#fff 0px 0px 6px","margin":"10px 0 10px 0","color":"rgba(255, 255, 255, 1)","borderRadius":"8px","alignItems":"center","borderWidth":"0   0 3px 0","fontSize":"16px","borderStyle":"solid"}'>
          <span>DATA SHOW</span>
-    <span>公告展示</span>
+    <span>健康公告展示</span>
 </div>
                             </div>
                             <div class="wow " data-wow-duration="2s" data-wow-delay="1s">
