--- a/src/main/resources/front/front/pages/newsLiuyan/add.html
+++ b/src/main/resources/front/front/pages/newsLiuyan/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>新闻留言添加</title>
+    <title>健康资讯留言添加</title>
     <!-- bootstrap样式，地图插件使用 -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../../layui/css/layui.css">
@@ -90,10 +90,10 @@
         <div class="data-add-container  sub_borderColor" :style='{"padding":"20px","margin":"30px auto","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"10px","borderWidth":"1px","borderStyle":"solid"}'>
 
             <form class="layui-form layui-form-pane add" lay-filter="myForm">
-                <!-- 级联表 新闻 -->
+                <!-- 级联表 健康资讯 -->
                 <!--<div class="layui-form-item main_borderColor" :style='{"padding":"10px","boxShadow":"0 0 0px rgba(255,0,0,.8)","margin":"0 0 10px 0","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"1px","borderWidth":"0 0 1px 0","borderStyle":"solid"}'>
                     <label  :style='{"width":"auto","borderColor": "rgba(255, 255, 255, 0)","padding":"0 12px 0 0","backgroundColor":"rgba(255, 255, 255, 0)","fontSize":"15px","color":"#333","textAlign":"left"}' class="layui-form-label">
-                        新闻：
+                        健康资讯：
                     </label>
                     <div class="layui-input-block">
                         <select name="newsId" id="newsId" lay-filter="newsId">
@@ -192,8 +192,8 @@
                     updateTime: '',
                     createTime: '',
                 },
-                newsList:[],//级联表列表 新闻
-                news: {},//级联表单个 新闻
+                newsList:[],//级联表列表 健康资讯
+                news: {},//级联表单个 健康资讯
                 yonghuList:[],//级联表列表 用户
                 yonghu: {},//级联表单个 用户
 
@@ -231,10 +231,10 @@
             //var newsId = http.getParam('newsId');
             let newsId = localStorage.getItem("newsId")
             if(newsId != null && newsId != ""){
-                //单个 新闻查询
+                //单个 健康资讯查询
                 initializationNews(newsId);
             }
-            //列表 新闻查询
+            //列表 健康资讯查询
             initializationNewsList();
             //var yonghuId = http.getParam('yonghuId');
             let yonghuId = localStorage.getItem("yonghuId")
@@ -332,7 +332,7 @@
 
 
 
-        //单个 新闻查询
+        //单个 健康资讯查询
         function initializationNews(id){
             layui.http.request("news/detail/" + id, 'get', {}, function (res) {
                 if(res.code ==0){
@@ -341,7 +341,7 @@
                 }
             });
         }
-        //列表 新闻查询
+        //列表 健康资讯查询
         function initializationNewsList(){
             layui.http.request("news/page?page=1&limit=100&sort=&order=", 'get', {}, function (res) {
                 if(res.code ==0){
