--- a/src/main/resources/front/front/pages/newsLiuyan/detail.html
+++ b/src/main/resources/front/front/pages/newsLiuyan/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>新闻留言详情页</title>
+    <title>健康资讯留言详情页</title>
     <link rel="stylesheet" href="../../layui/css/layui.css">
     <!-- 样式 -->
     <link rel="stylesheet" href="../../css/style.css"/>
