--- a/src/main/resources/front/front/pages/newsLiuyan/list2.html
+++ b/src/main/resources/front/front/pages/newsLiuyan/list2.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
-    <title>新闻留言</title>
+    <title>健康资讯留言</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="renderer" content="webkit">
@@ -113,7 +113,7 @@
 <div class="prolist">
     <div class="left_nav">
         <dl class="dlx1">
-            <dt>新闻留言</dt>
+            <dt>健康资讯留言</dt>
             <dd>USER / CENTER</dd>
         </dl>
         <ul>
@@ -125,16 +125,16 @@
         <div class="right-container sub_borderColor" style="overflow: auto" :style='{"padding":"20px","boxShadow":"0px rgba(255,0,0,.8)","margin":"0","backgroundColor":"#fff","borderRadius":"0","borderWidth":"1px","borderStyle":"solid","width":"80%"}'>
             <div style="display: flex;height: 60px;align-items: center;margin-left: 15px;justify-content: space-between">
 <!--                <button @click="jump('../newsLiuyan/add.html')" class="layui-btn layui-btn-lg btn-theme sub_backgroundColor" :style='{"padding":"0 15px","boxShadow":"0 0 8px rgba(0,0,0,0)","margin":"0 0 0 10px","borderColor":"#409EFF","color":"#333","borderRadius":"4px","borderWidth":"0","width":"auto","fontSize":"14px","borderStyle":"solid","height":"40px"}'>
-                    <i v-if="true" class="layui-icon">&#xe654;</i> 添加新闻留言信息
+                    <i v-if="true" class="layui-icon">&#xe654;</i> 添加健康资讯留言信息
                 </button>-->
             </div>
             <table class="layui-table" lay-skin="nob">
                 <thead>
                     <tr>
                     <!-- 级联表 -->
-                        <th>新闻名称</th>
-                        <th>新闻类型</th>
-                        <th>新闻照片</th>
+                        <th>健康资讯名称</th>
+                        <th>健康资讯类型</th>
+                        <th>健康资讯照片</th>
                         <!-- 当前表 -->
                         <th>留言内容</th>
                         <th>留言时间</th>
