--- a/src/main/resources/front/front/pages/forum/detail.html
+++ b/src/main/resources/front/front/pages/forum/detail.html
@@ -1,10 +1,10 @@
-<!-- 论坛详情 -->
+<!-- 健康知识交流区详情 -->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>论坛详情</title>
+    <title>健康知识交流区详情</title>
     <link rel="stylesheet" href="../../layui/css/layui.css">
     <!-- 样式 -->
     <link rel="stylesheet" href="../../css/style.css" />
@@ -62,7 +62,7 @@
 <div id="app">
     <!-- 标题 -->
     <div class="index-title sub_backgroundColor sub_borderColor" :style='{"padding":"10px","margin":"10px auto","borderColor":"rgba(0,0,0,.3)","color":"rgba(255, 255, 255, 1)","borderRadius":"4px","borderWidth":"0","fontSize":"20px","borderStyle":"solid","height":"auto"}'>
-        <span>FORUM / INFORMATION</span><span>论坛</span>
+        <span>FORUM / INFORMATION</span><span>健康知识交流区</span>
     </div>
     <!-- 标题 -->
 
