--- a/src/main/resources/front/front/pages/gonggao/add.html
+++ b/src/main/resources/front/front/pages/gonggao/add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>公告添加</title>
+    <title>健康公告添加</title>
     <!-- bootstrap样式，地图插件使用 -->
     <link rel="stylesheet" href="../../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../../layui/css/layui.css">
@@ -93,7 +93,7 @@
     <!-- 当前表的 -->
                 <div class="layui-form-item main_borderColor" :style='{"padding":"10px","boxShadow":"0 0 0px rgba(255,0,0,.8)","margin":"0 0 10px 0","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"1px","borderWidth":"0 0 1px 0","borderStyle":"solid"}'>
                     <label  :style='{"width":"auto","borderColor": "rgba(255, 255, 255, 0)","padding":"0 12px 0 0","backgroundColor":"rgba(255, 255, 255, 0)","fontSize":"15px","color":"#333","textAlign":"left"}' class="layui-form-label">
-                        公告名称：
+                        健康公告名称：
                     </label>
                     <div class="layui-input-block">
                         <input class="layui-input main_borderColor" :style='{"padding":"0 12px","boxShadow":"0 0 0px rgba(160, 67, 26, 1)","backgroundColor":"#fff","color":"rgba(135, 206, 250, 1)","borderRadius":"4px","textAlign":"left","borderWidth":"1px","fontSize":"15px","borderStyle":"solid","height":"40px"}'
@@ -102,7 +102,7 @@
                 </div>
                 <div class="layui-form-item main_borderColor" :style='{"padding":"10px","boxShadow":"0 0 0px rgba(255,0,0,.8)","margin":"0 0 10px 0","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"1px","borderWidth":"0 0 1px 0","borderStyle":"solid"}'>
                     <label  :style='{"width":"auto","borderColor": "rgba(255, 255, 255, 0)","padding":"0 12px 0 0","backgroundColor":"rgba(255, 255, 255, 0)","fontSize":"15px","color":"#333","textAlign":"left"}' class="layui-form-label">
-                        公告图片：
+                        健康公告图片：
                     </label>
                     <div class="layui-input-block">
                         <div v-if="detail.gonggaoPhoto" style="display:inline-block;margin-right:10px;">
@@ -111,13 +111,13 @@
                             <input type="hidden" :value="detail.gonggaoPhoto" id="gonggaoPhoto" name="gonggaoPhoto" />
                         </div>
                         <button v-if="!ro.gonggaoPhoto" :style='{"padding":"0 10px","boxShadow":"0 0 0px rgba(255,0,0,.5)","margin":"0 10px 0 0","borderColor":"#ccc","color":"#fff","borderRadius":"8px","borderWidth":"0","width":"auto","fontSize":"14px","borderStyle":"solid","height":"44px"}' type="button" class="layui-btn btn-theme main_backgroundColor" id="gonggaoPhotoUpload">
-                            <i v-if="true" :style='{"color":"#fff","show":true,"fontSize":"14px"}' class="layui-icon">&#xe67c;</i>上传公告图片
+                            <i v-if="true" :style='{"color":"#fff","show":true,"fontSize":"14px"}' class="layui-icon">&#xe67c;</i>上传健康公告图片
                         </button>
                     </div>
                 </div>
                     <div class="layui-form-item main_borderColor" :style='{"padding":"10px","boxShadow":"0 0 0px rgba(255,0,0,.8)","margin":"0 0 10px 0","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"1px","borderWidth":"0 0 1px 0","borderStyle":"solid"}'>
                     <label  :style='{"width":"auto","borderColor": "rgba(255, 255, 255, 0)","padding":"0 12px 0 0","backgroundColor":"rgba(255, 255, 255, 0)","fontSize":"15px","color":"#333","textAlign":"left"}' class="layui-form-label">
-                        公告类型：
+                        健康公告类型：
                     </label>
                     <div class="layui-input-block">
                         <select name="gonggaoTypes" id="gonggaoTypes" lay-filter="gonggaoTypes" :disabled="ro.gonggaoTypes">
@@ -128,7 +128,7 @@
 <!-- text后缀 -->
             <div class="layui-form-item main_borderColor" :style='{"padding":"10px","boxShadow":"0 0 0px rgba(255,0,0,.8)","margin":"0 0 10px 0","backgroundColor":"rgba(255, 255, 255, 0)","borderRadius":"1px","borderWidth":"0 0 1px 0","borderStyle":"solid"}'>
                 <label  :style='{"width":"auto","borderColor": "rgba(255, 255, 255, 0)","padding":"0 12px 0 0","backgroundColor":"rgba(255, 255, 255, 0)","fontSize":"15px","color":"#333","textAlign":"left"}' class="layui-form-label">
-                    公告详情：
+                    健康公告详情：
                 </label>
                 <div class="layui-input-block">
                     <textarea class="main_borderColor layui-input" style="width: 100%;height: 100px;border-radius: 5px;padding: 10px" v-model="detail.gonggaoContent" lay-verify="required" :readonly="ro.gonggaoContent" name="gonggaoContent" id="gonggaoContent" autocomplete="off"></textarea>
@@ -224,11 +224,11 @@
             localStorage.setItem("goUtl","./pages/gonggao/list.html")
 
             // 下拉框
-            // 公告类型的查询和初始化
+            // 健康公告类型的查询和初始化
             gonggaoTypesSelect();
 
            // 上传文件
-            // 公告图片的文件上传
+            // 健康公告图片的文件上传
             upload.render({
                 //绑定元素
                 elem: '#gonggaoPhotoUpload',
@@ -349,7 +349,7 @@
 
 
 
-       // 公告类型的查询
+       // 健康公告类型的查询
        function gonggaoTypesSelect() {
            //填充下拉框选项
            layui.http.request("dictionary/page?page=1&limit=100&sort=&order=&dicCode=gonggao_types", "GET", {}, (res) => {
