--- a/src/main/resources/front/front/pages/gonggao/detail.html
+++ b/src/main/resources/front/front/pages/gonggao/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>公告详情页</title>
+    <title>健康公告详情页</title>
     <link rel="stylesheet" href="../../layui/css/layui.css">
     <!-- 样式 -->
     <link rel="stylesheet" href="../../css/style.css"/>
@@ -76,7 +76,7 @@
 
         <div class="index-title sub_backgroundColor" :style='{"padding":"10px","boxShadow":"0 0 2px rgba(160, 67, 26, 1)","margin":"10px auto","borderColor":"rgba(0,0,0,.3)","color":"rgba(255, 255, 255, 1)","borderRadius":"4px","borderWidth":"0","fontSize":"20px","borderStyle":"solid","height":"auto"}'>
             <span>NEWS / INFORMATION</span>
-            <span>公告</span>
+            <span>健康公告</span>
         </div>
 
         <div class="news-container">
