--- a/src/main/resources/front/front/pages/gonggao/list2.html
+++ b/src/main/resources/front/front/pages/gonggao/list2.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
-    <title>公告</title>
+    <title>健康公告</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="renderer" content="webkit">
@@ -113,7 +113,7 @@
 <div class="prolist">
     <div class="left_nav">
         <dl class="dlx1">
-            <dt>公告</dt>
+            <dt>健康公告</dt>
             <dd>USER / CENTER</dd>
         </dl>
         <ul>
@@ -135,18 +135,18 @@
                     </div>
                 </div>
 <!--                <button @click="jump('../gonggao/add.html')" class="layui-btn layui-btn-lg btn-theme sub_backgroundColor" :style='{"padding":"0 15px","boxShadow":"0 0 8px rgba(0,0,0,0)","margin":"0 0 0 10px","borderColor":"#409EFF","color":"#333","borderRadius":"4px","borderWidth":"0","width":"auto","fontSize":"14px","borderStyle":"solid","height":"40px"}'>
-                    <i v-if="true" class="layui-icon">&#xe654;</i> 添加公告信息
+                    <i v-if="true" class="layui-icon">&#xe654;</i> 添加健康公告信息
                 </button>-->
             </div>
             <table class="layui-table" lay-skin="nob">
                 <thead>
                     <tr>
                         <!-- 当前表 -->
-                        <th>公告名称</th>
-                        <th>公告图片</th>
-                        <th>公告类型</th>
-                        <th>公告发布时间</th>
-                        <th>公告详情</th>
+                        <th>健康公告名称</th>
+                        <th>健康公告图片</th>
+                        <th>健康公告类型</th>
+                        <th>健康公告发布时间</th>
+                        <th>健康公告详情</th>
                         <th>操作</th>
                     </tr>
                 </thead>
@@ -326,16 +326,16 @@
 
         // var id = http.getParam('id');
 
-        //公告类型的动态搜素
+        //健康公告类型的动态搜素
         $(document).on("click", ".thisTableType-search", function (e) {
             vue.searchForm.gonggaoTypes = $(this).attr('index');
             pageList();
         });
 
 
-            //当前表的 公告类型 字段 字典表查询
+            //当前表的 健康公告类型 字段 字典表查询
             gonggaoTypesSelect();
-           //当前表的 公告类型 字段 字典表查询方法
+           //当前表的 健康公告类型 字段 字典表查询方法
            function gonggaoTypesSelect() {
                http.request("dictionary/page?page=1&limit=100&sort=&order=&dicCode=gonggao_types", 'get', {}, function (res) {
                    if(res.code == 0){
