--- a/src/main/resources/front/front/pages/newsLiuyan/list.html
+++ b/src/main/resources/front/front/pages/newsLiuyan/list.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
-    <title>新闻留言</title>
+    <title>健康资讯留言</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="renderer" content="webkit">
@@ -205,7 +205,7 @@
     .layui-laypage .layui-laypage-skip {
         padding-left: 10px;
     }
-    /*新闻标题样式*/
+    /*健康资讯标题样式*/
     .recommend .box .news .list-item .list-item-body .item-info .name {
         padding-top: 5px;
         color: red;
@@ -217,7 +217,7 @@
         -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
     }
-    /*新闻内容样式*/
+    /*健康资讯内容样式*/
     .recommend .box .news .list-item .list-item-body .item-info .time {
         padding-top: 5px;
         color: red;
@@ -245,10 +245,10 @@
                     <div class="title sub_backgroundColor sub_borderColor"
                  :style='{"padding":"10px 0 10px 0","margin":"10px 0 10px 0","borderRadius":"4px","borderWidth":"1px","borderStyle":"solid","justifyContent":"space-between","height":"54px"}'>
                     <span :style='{"padding":"0 10px","boxShadow":"0 0 6px rgba(255,0,0,0)","borderColor":"rgba(255,0,0,1)","backgroundColor":"rgba(0,0,0,0)","color":"rgba(11, 11, 11, 1)","borderRadius":"0 0 2px 0","borderWidth":"0","fontSize":"18px","borderStyle":"solid"}'>
-                    新闻留言
+                    健康资讯留言
                     </span>
                 <span :style='{"padding":"0 10px","boxShadow":"0 0 6px rgba(255,0,0,0)","borderColor":"rgba(0,0,0,0)","backgroundColor":"rgba(0,0,0,0)","color":"rgba(255, 255, 255, 1)","borderRadius":"0","borderWidth":"0","fontSize":"16px","borderStyle":"solid"}'>
-                    您现在的位置：新闻留言
+                    您现在的位置：健康资讯留言
                 </span>
             </div>
             <form class="layui-form filter main_backgroundColor"
